<resources>
    <string name="app_name">Project</string>
    <string name="welcome">Welcome</string>
    <string name="password">Enter Password Here</string>
    <string name="Email">Enter Email Here</string>
    <string name="New_acc">Create New Account</string>
    <string name="login">Login</string>
    <string name="user_submit">SUBMITT</string>
    <string name="title_activity_home__page">Home_Page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="resturants">Resturants</string>
    <string name="review">Review</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipies">Recipies</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="about"><i><b>FoodFactory</b></i> is a food app where you can find recipes of your favourite Food.
        Users can give reviews about the food they cook</string>
</resources>
