<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_menu">
    <group android:checkableBehavior="single"
        android:id="@+id/group">
        <item android:id="@+id/Dashboard"
            android:icon="@drawable/dashboard"
            android:title="@string/home"
            />

        <item android:id="@+id/Recipies"
            android:icon="@drawable/restaurant"
            android:title="@string/recipies"
            />

        <item android:id="@+id/Review"
            android:icon="@drawable/review"
            android:title="@string/review"
            />
        <item android:id="@+id/myprofile"
            android:icon="@drawable/profile"
            android:title="@string/my_profile"
            android:onClick="profile"
            />
        <item android:id="@+id/contact"
            android:icon="@drawable/contact"
            android:title="@string/contact_us"
            />
        <item android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about_us"
            />

        </group>
    <item android:title="@string/profile">
    <menu>
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_logout"
            android:onClick="Logout"
            android:title="Logout" />

    </group>
        </menu>
    </item>
</menu>