<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".Login_Page">
<ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:id="@+id/IV_login"
    android:layout_alignParentTop="true"
    android:layout_centerInParent="true"
    android:background="@drawable/logo"
    android:layout_margin="20dp"
    android:scaleType="centerCrop"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/Email_login"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:layout_centerInParent="true"
        android:layout_below="@id/IV_login"
        android:nextFocusDown="@id/password_login"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/password_login"
        android:hint="@string/password"
        android:layout_margin="5dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:layout_below="@id/Email_login"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:id="@+id/btn1_login"
        android:background="@drawable/button_login"
        android:layout_below="@id/password_login"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textColor="#ffff"
        android:text="@string/login"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:id="@+id/btn2_Sign"
        android:background="@drawable/button_login"
        android:layout_below="@id/btn1_login"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:textColor="#ffff"
        android:text="@string/New_acc"
        android:onClick="change"/>
    <TextView
        android:layout_width="50dp"
        android:layout_marginStart="80dp"
        android:layout_below="@id/btn2_Sign"
        android:id="@+id/Line1"
        android:layout_height="2dp"
        android:background="#ACA8A8"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="50dp"
        android:layout_marginEnd="80dp"
        android:layout_below="@id/btn2_Sign"
        android:layout_alignParentRight="true"
        android:id="@+id/Line2"
        android:layout_height="2dp"
        android:background="#ACA8A8"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:id="@+id/OR"
        android:text="OR Connect with"
        android:textStyle="bold"
        android:textColor="#ACA8A8"
        android:textSize="12sp"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn2_Sign"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:id="@+id/btn3_Google"
        android:layout_marginStart="10dp"
        android:background="@drawable/google_button"
        android:drawableStart="@drawable/google_icon"
        android:layout_below="@id/OR"
        android:layout_margin="4dp"
        android:layout_centerInParent="true"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAlignment="center"
        android:text="GOOGLE"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_below="@id/btn3_Google"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorAccent"
        android:text="Login As Admin"/>
    <ProgressBar
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/bar"
        android:background="@drawable/progress_bar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

</RelativeLayout>